tests/baselines/reference/stringPropertyAccessWithError.errors.txt
stringPropertyAccessWithError.ts(2,21): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.


==== stringPropertyAccessWithError.ts (1 errors) ====
    var x = '';
    var d = x['charAt']('invalid'); // error
                        ~~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.